terraform/vpc.tf
# vpc
resource "aws_vpc" "vpc1" {
  cidr_block       = "10.0.0.0/16"
  

  tags = {
     Name = "${var.client_name}-vpc1"
    managed_by = "${var.managed_by}"
}
}
# Internet gateway
resource "aws_internet_gateway" "igw1" {
  vpc_id = aws_vpc.vpc1.id

  tags = {
    Name = "${var.client_name}-igw1"
    managed_by = "${var.managed_by}"
  }
}

# public subnet-1

resource "aws_subnet" "pub_subnet-1" {
  vpc_id     = aws_vpc.vpc1.id
  cidr_block = "10.0.1.0/24"

  tags = {
   Name = "${var.client_name}-pub_subnet-1"
   managed_by = "${var.managed_by}"
  }
}

# private subnet-1
  
resource "aws_subnet" "pri_subnet-1" {
  vpc_id     = aws_vpc.vpc1.id
  cidr_block = "10.0.2.0/24"

  tags = {
   Name = "${var.client_name}-pri_subnet-1"
   managed_by = "${var.managed_by}"
  }
}


# public rt-1

resource "aws_route_table" "pub_rt-1" {
  vpc_id = aws_vpc.vpc1.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw1.id
  }

 

  tags = {
    Name = "${var.client_name}-pub_rt-1"
   managed_by = "${var.managed_by}"
  }
}

# private rt-1
resource "aws_route_table" "pri_rt-1" {
  vpc_id = aws_vpc.vpc1.id
  tags = {
    Name = "${var.client_name}-pri_rt-1"
   managed_by = "${var.managed_by}"
  }
}

# public subnet 1 association
resource "aws_route_table_association" "pub_subnet-rt1" {
  subnet_id      = aws_subnet.pub_subnet-1.id
  route_table_id = aws_route_table.pub_rt-1.id
}

# private subnet 1 association
resource "aws_route_table_association" "pri_subnet-rt1" {
  subnet_id      = aws_subnet.pri_subnet-1.id
  route_table_id = aws_route_table.pri_rt-1.id
}

# security group
resource"aws_security_group" "sgp" {
  name = "${var.client_name}-sgp"
  # description = "Allow TLS inbound traffic and all outbound traffic"
  vpc_id      = aws_vpc.vpc1.id

   ingress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      =[aws_vpc.vpc1.cidr_block]
    
  }
   ingress {
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      =["0.0.0.0/0"]  
  }   

   egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  
  }

  tags = {
    Name = "${var.client_name}-sgp"
  }
}
